frontend-html/src/gui/connections/MobileComponents/MobileMain.module.scss
/*
Copyright 2005 - 2021 Advantage Solutions, s. r. o.

This file is part of ORIGAM (http://www.origam.org).

ORIGAM is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

ORIGAM is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with ORIGAM. If not, see <http://www.gnu.org/licenses/>.
*/

.root {
  height: 100%;
  max-height: 100%;
  display: flex;
  flex-direction: column;
}

.root :global(.sidebar) {
  height: 50%;
  flex-grow: 1;
}

.hidden {
  max-height: 0;
  max-width: 0;
  z-index: -1;
}

.mainWrapper{
  flex: 1;
  display: flex;
  flex-direction: column;
}

.dialog {
  top: 0;
  left: 0;
  z-index: 100;
  position: absolute;
  height: 100%;
  background: var(--background1);
  overflow: hidden;
}

.hidden{
  display: none;
}

